--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -15,3 +15,53 @@ body {
         @apply text-white focus:text-white;
     }
 }
+
+.bx--table-toolbar{
+    display: none;
+}
+
+.bx--tabs__nav{
+    @apply w-full;
+
+    li{
+        @apply flex-1;
+
+        a, a:focus{
+            @apply w-full
+        }
+    }
+}
+
+.white-tabs{
+    ul{
+        @apply bg-white;
+    }
+    a{
+        @apply outline-none
+    }
+
+    .bx--tabs__nav-item--selected{
+        .bx--tabs__nav-link, .bx--tabs__nav-link:active{
+            outline: none !important;
+            border-bottom-color: #0B6B74 !important;
+            color: #0B6B74 !important;
+            font-size: 0.75rem !important;
+        }
+    }
+
+    a.bx--tabs__nav-link:focus, a.bx--tabs__nav-link:active{
+        @apply outline-none;
+        border-bottom-color: #0B6B74 !important;
+    }
+
+    .bx--tabs__nav-item{
+        outline: none !important;
+        @apply text-gray-500 text-xs text-center
+    }
+}
+
+.transparent-table{
+    .bx--data-table-header, .bx--data-table thead, .bx--data-table tbody, .bx--data-table td, .cv-pagination{
+        background-color: transparent !important;
+    }
+}
