--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,14 @@
 @import 'typography';
+@import '@carbon/themes/scss/themes';
+// Use the gray 10 theme
+// @include carbon--theme($carbon--theme--g10);
+// Use the gray 90 theme
+@include carbon--theme($carbon--theme--g90);
+@include carbon--theme();
+
 body {
-    font-family: 'Graphik'
+    font-family: 'Graphik';
+    overflow: hidden;
 }
 p{
     @apply text-sm
