--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -14,6 +14,7 @@ p{
     @apply text-primary
 }
 
-*{
-    @apply ring-0 ring-transparent
+*:focus{
+    outline: none !important;
+    font-family: 'Graphik' !important;
 }
