--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,34 +1,36 @@
-@import 'typography';
+@import "typography";
 @import "custom";
 
-$ui-05: #0B6B74;
-$interactive-01: #0B6B74;
+$ui-05: #0b6b74;
+$interactive-01: #0b6b74;
 
 body {
-    font-family: 'Graphik';
-    overflow: hidden;
+  font-family: "Graphik";
+  overflow: hidden;
 }
-p{
-    line-height: 1.25rem !important;
-    @apply text-primary
+p {
+  line-height: 1.25rem !important;
+  @apply text-primary;
 }
 
-*:focus{
-    outline: none !important;
-    font-family: 'Graphik' !important;
+*:focus {
+  outline: none !important;
+  // font-family: 'Graphik' !important;
 }
 
 .series::-webkit-scrollbar {
-    width: 5px;
-    @apply bg-tetiary h-5;
+  width: 5px;
+  @apply bg-tetiary h-5;
 }
 
 .series::-webkit-scrollbar-thumb {
-    background: #0B6B74 url('https://res.cloudinary.com/seddiescloudimagecdn/image/upload/v1613933332/Group_229.png') no-repeat;
-    background-size: contain 1rem;
-    @apply bg-center
+  background: #0b6b74
+    url("https://res.cloudinary.com/seddiescloudimagecdn/image/upload/v1613933332/Group_229.png")
+    no-repeat;
+  background-size: contain 1rem;
+  @apply bg-center;
 }
 
-.bx--inline-notification__subtitle{
+.bx--inline-notification__subtitle {
   color: white;
 }
