--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @font-face {
     font-family: 'Graphik';
     src: url('/fonts/GraphikRegular.otf') format('opentype');
     font-style: normal;
     font-weight: 300;
-  }
+}
