--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -5,7 +5,7 @@ $ui-05: #0b6b74;
 $interactive-01: #0b6b74;
 
 body {
-  font-family: "Graphik";
+  font-family: 'Graphik', 'Open Sans';
   overflow: hidden;
 }
 p {
