--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -106,6 +106,12 @@ $primary: #0b6b74;
     border-bottom: 1px solid rgba($color: #121619, $alpha: 0.1) !important;
     --tw-border-opacity: 0.1 !important;
   }
+
+  .bx--expandable-row{
+    td{
+      border-width: 0px !important;
+    }
+  }
 }
 
 .bx--modal-container--xs {
