--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -322,3 +322,25 @@ button:focus {
     display: none !important;
   }
 }
+
+// input customization
+.se-input-gray{
+  input{
+    background-color: #f4f4f4 !important;
+  }
+}
+
+// tables
+.small-table{
+  .bx--table-header-label{
+    @apply text-xs font-medium uppercase tracking-wide
+  }
+
+  tr{
+    @apply h-9
+  }
+
+  td p {
+    @apply text-sm
+  }
+}
