--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -325,7 +325,7 @@ button:focus {
 
 // input customization
 .se-input-gray{
-  input{
+  input, textarea{
     background-color: #f4f4f4 !important;
   }
 }
