cache updates and bug fixes

--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -364,7 +364,7 @@ button:focus {
 }
 
 .se-input-white{
-  input, textarea{
+  input, textarea, select{
     background-color: white !important;
   }
 }
