updates to encounter page

--- a/src/assets/styles/_custom.scss
+++ b/src/assets/styles/_custom.scss
@@ -271,7 +271,7 @@ button:focus {
 }
 
 .v-toast {
-  z-index: 10000 !important;
+  z-index: 15555000 !important;
 }
 .v-toast.v-toast--top {
   top: 2rem !important;
